syntax = "proto3";

option java_multiple_files = true;
option java_package = "qm.grpc.errors";
option java_outer_classname = "ErrorsProto";
option objc_class_prefix = "HLW";

package qm.grpc.errors;

enum JobManagerErrorTypes {
    JobManagerUnspecifiedError = 0;
    reserved 1 to 999;
    MissingJobError = 1000;
    InvalidJobExecutionStatusError = 1001;
    InvalidOperationOnSimulatorJobError = 1002;
    InvalidOperationOnRealJobError = 1003;
    JobOperationSpecificError = 1004;
    ConfigQueryError = 1005;
    UnknownInputStreamError = 1006;
    reserved 2000 to max;
}

enum JobOperationSpecificErrorTypes {
    JobOperationUnspecifiedError = 0;
    reserved 1 to 2999;
    SingleInputElementError = 3000;
    InvalidCorrectionMatrixError = 3001;
    ElementWithoutIntermediateFrequencyError = 3002;
    InvalidDigitalInputThresholdError = 3003;
    InvalidDigitalInputDeadtimeError = 3004;
    InvalidDigitalInputPolarityError = 3005;
    reserved 4000 to max;
}

enum ConfigQueryErrorTypes {
    ConfigQueryUnspecifiedError = 0;
    reserved 1 to 3999;
    MissingControllerError = 4000;
    MissingElementError = 4001;
    MissingDigitalInputError = 4002;
    reserved 5000 to max;
}